113-2-CompilerHW3-main/y.output
Terminals unused in grammar

    FOR
    LOOP
    RETURN
    BREAK
    ARROW
    IN
    DOTDOT
    IDENT


Rules useless in parser due to conflicts

   15 IfStatement: OPTIONAL_NEWLINE

   91 DATA: INT_LIT
   92     | FLOAT_LIT
   94     | TRUE
   95     | FALSE


State 0 conflicts: 9 shift/reduce
State 3 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 11 conflicts: 9 shift/reduce
State 14 conflicts: 1 shift/reduce
State 16 conflicts: 12 reduce/reduce
State 19 conflicts: 3 reduce/reduce
State 20 conflicts: 3 reduce/reduce
State 22 conflicts: 3 reduce/reduce
State 23 conflicts: 3 reduce/reduce
State 26 conflicts: 1 shift/reduce
State 36 conflicts: 40 reduce/reduce
State 39 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 9 shift/reduce
State 52 conflicts: 12 reduce/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 87 conflicts: 10 shift/reduce
State 108 conflicts: 9 shift/reduce
State 110 conflicts: 36 reduce/reduce
State 112 conflicts: 31 reduce/reduce
State 114 conflicts: 24 reduce/reduce
State 117 conflicts: 13 reduce/reduce
State 128 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 9 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 9 shift/reduce
State 146 conflicts: 10 shift/reduce
State 147 conflicts: 10 shift/reduce
State 150 conflicts: 1 shift/reduce
State 152 conflicts: 10 shift/reduce
State 153 conflicts: 12 reduce/reduce
State 161 conflicts: 9 shift/reduce
State 168 conflicts: 10 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList OPTIONAL_NEWLINE

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: FunctionDeclStmt
    5                | '{' OPTIONAL_NEWLINE GlobalStatementList '}' OPTIONAL_NEWLINE
    6                | OPTIONAL_NEWLINE
    7                | IfStatement
    8                | WhileStatement

    9 $@1: ε

   10 WhileStatement: WHILE Expr '{' $@1 GlobalStatementList '}'

   11 $@2: ε

   12 IfStatement: IF Expr '{' $@2 GlobalStatementList '}'

   13 $@3: ε

   14 IfStatement: IfStatement ELSE '{' $@3 GlobalStatementList '}'
   15            | OPTIONAL_NEWLINE

   16 FunctionDeclStmt: FUNC ID '(' ')' '{' OPTIONAL_NEWLINE GlobalStatementList '}'
   17                 | LET ID ':' Type OPTION_STORE
   18                 | LET MUT ID OPTION_STORE
   19                 | LET MUT ID '=' STORE_DATA ';'

   20 $@4: ε

   21 FunctionDeclStmt: PRINTLN $@4 '(' Expr ')' ';'
   22                 | PRINT '(' Expr ')' ';'
   23                 | ID ASSIGN Expr ';'

   24 OPTION_STORE: '=' STORE_DATA ';'
   25             | STORE_DATA ';'

   26 ASSIGN: '='
   27       | ADD_ASSIGN
   28       | SUB_ASSIGN
   29       | MUL_ASSIGN
   30       | DIV_ASSIGN
   31       | REM_ASSIGN

   32 Expr: LORExpr
   33     | DATA

   34 LORExpr: LORExpr LOR LANDExpr
   35        | LANDExpr
   36        | OPTIONAL_NEWLINE

   37 LANDExpr: LANDExpr LAND EqualityExpr
   38         | EqualityExpr
   39         | OPTIONAL_NEWLINE

   40 EqualityExpr: EqualityExpr EQL RelExpr
   41             | EqualityExpr NEQ RelExpr
   42             | RelExpr
   43             | OPTIONAL_NEWLINE

   44 RelExpr: RelExpr '>' AddExpr
   45        | RelExpr '<' AddExpr
   46        | RelExpr GEQ AddExpr
   47        | RelExpr LEQ AddExpr
   48        | AddExpr
   49        | OPTIONAL_NEWLINE

   50 AddExpr: AddExpr '+' Term
   51        | AddExpr '-' Term
   52        | Term
   53        | OPTIONAL_NEWLINE

   54 Term: Term '*' Factor
   55     | Term '/' Factor
   56     | Term '%' Factor
   57     | Factor
   58     | OPTIONAL_NEWLINE

   59 Factor: '(' Expr ')'
   60       | Factor LSHIFT Factor
   61       | Factor RSHIFT Factor
   62       | '-' Factor
   63       | '!' Factor
   64       | ID
   65       | INT_LIT
   66       | FLOAT_LIT
   67       | TRUE
   68       | FALSE
   69       | ID '[' INT_LIT ']'
   70       | Factor AS Type

   71 Type: INT
   72     | FLOAT
   73     | BOOL
   74     | STR
   75     | '&' STR

   76 $@5: ε

   77 Type: '[' INT ';' INT_LIT $@5 ']'

   78 OPTIONAL_NEWLINE: NEWLINE
   79                 | ε

   80 STORE_DATA: INT_LIT
   81           | FLOAT_LIT
   82           | '"' STRING_LIT '"'
   83           | TRUE
   84           | FALSE
   85           | ε

   86 $@6: ε

   87 STORE_DATA: '[' INT_LIT $@6 OPTION_ELEMENT

   88 $@7: ε

   89 OPTION_ELEMENT: ',' INT_LIT $@7 OPTION_ELEMENT
   90               | ']'

   91 DATA: INT_LIT
   92     | FLOAT_LIT
   93     | '"' STRING_LIT '"'
   94     | TRUE
   95     | FALSE


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 63
    '"' (34) 82 93
    '%' (37) 56
    '&' (38) 75
    '(' (40) 16 21 22 59
    ')' (41) 16 21 22 59
    '*' (42) 54
    '+' (43) 50
    ',' (44) 89
    '-' (45) 51 62
    '/' (47) 55
    ':' (58) 17
    ';' (59) 19 21 22 23 24 25 77
    '<' (60) 45
    '=' (61) 19 24 26
    '>' (62) 44
    '[' (91) 69 77 87
    ']' (93) 69 77 90
    '{' (123) 5 10 12 14 16
    '}' (125) 5 10 12 14 16
    error (256)
    LET (258) 17 18 19
    MUT (259) 18 19
    NEWLINE (260) 78
    INT (261) 71 77
    FLOAT (262) 72
    BOOL (263) 73
    STR (264) 74 75
    TRUE (265) 67 83 94
    FALSE (266) 68 84 95
    GEQ (267) 46
    LEQ (268) 47
    EQL (269) 40
    NEQ (270) 41
    LOR (271) 34
    LAND (272) 37
    ADD_ASSIGN (273) 27
    SUB_ASSIGN (274) 28
    MUL_ASSIGN (275) 29
    DIV_ASSIGN (276) 30
    REM_ASSIGN (277) 31
    IF (278) 12
    ELSE (279) 14
    FOR (280)
    WHILE (281) 10
    LOOP (282)
    PRINT (283) 22
    PRINTLN (284) 21
    FUNC (285) 16
    RETURN (286)
    BREAK (287)
    ID (288) 16 17 18 19 23 64 69
    ARROW (289)
    AS (290) 70
    IN (291)
    DOTDOT (292)
    RSHIFT (293) 61
    LSHIFT (294) 60
    INT_LIT <i_val> (295) 65 69 77 80 87 89 91
    FLOAT_LIT <f_val> (296) 66 81 92
    STRING_LIT <s_val> (297) 82 93
    IDENT <s_val> (298)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program (65)
        on left: 1
        on right: 0
    GlobalStatementList (66)
        on left: 2 3
        on right: 1 2 5 10 12 14 16
    GlobalStatement (67)
        on left: 4 5 6 7 8
        on right: 2 3
    WhileStatement (68)
        on left: 10
        on right: 8
    $@1 (69)
        on left: 9
        on right: 10
    IfStatement (70)
        on left: 12 14 15
        on right: 7 14
    $@2 (71)
        on left: 11
        on right: 12
    $@3 (72)
        on left: 13
        on right: 14
    FunctionDeclStmt (73)
        on left: 16 17 18 19 21 22 23
        on right: 4
    $@4 (74)
        on left: 20
        on right: 21
    OPTION_STORE (75)
        on left: 24 25
        on right: 17 18
    ASSIGN <s_val> (76)
        on left: 26 27 28 29 30 31
        on right: 23
    Expr <s_val> (77)
        on left: 32 33
        on right: 10 12 21 22 23 59
    LORExpr <s_val> (78)
        on left: 34 35 36
        on right: 32 34
    LANDExpr <s_val> (79)
        on left: 37 38 39
        on right: 34 35 37
    EqualityExpr <s_val> (80)
        on left: 40 41 42 43
        on right: 37 38 40 41
    RelExpr <s_val> (81)
        on left: 44 45 46 47 48 49
        on right: 40 41 42 44 45 46 47
    AddExpr <s_val> (82)
        on left: 50 51 52 53
        on right: 44 45 46 47 48 50 51
    Term <s_val> (83)
        on left: 54 55 56 57 58
        on right: 50 51 52 54 55 56
    Factor <s_val> (84)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 54 55 56 57 60 61 62 63 70
    Type <s_val> (85)
        on left: 71 72 73 74 75 77
        on right: 17 70
    $@5 (86)
        on left: 76
        on right: 77
    OPTIONAL_NEWLINE (87)
        on left: 78 79
        on right: 1 5 6 15 16 36 39 43 49 53 58
    STORE_DATA (88)
        on left: 80 81 82 83 84 85 87
        on right: 19 24 25
    $@6 (89)
        on left: 86
        on right: 87
    OPTION_ELEMENT (90)
        on left: 89 90
        on right: 87 89
    $@7 (91)
        on left: 88
        on right: 89
    DATA <s_val> (92)
        on left: 91 92 93 94 95
        on right: 33


State 0

    0 $accept: • Program $end

    LET      shift, and go to state 1
    NEWLINE  shift, and go to state 2
    IF       shift, and go to state 3
    WHILE    shift, and go to state 4
    PRINT    shift, and go to state 5
    PRINTLN  shift, and go to state 6
    FUNC     shift, and go to state 7
    ID       shift, and go to state 8
    '{'      shift, and go to state 9

    LET       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    NEWLINE   [reduce using rule 79 (OPTIONAL_NEWLINE)]
    IF        [reduce using rule 79 (OPTIONAL_NEWLINE)]
    WHILE     [reduce using rule 79 (OPTIONAL_NEWLINE)]
    PRINT     [reduce using rule 79 (OPTIONAL_NEWLINE)]
    PRINTLN   [reduce using rule 79 (OPTIONAL_NEWLINE)]
    FUNC      [reduce using rule 79 (OPTIONAL_NEWLINE)]
    ID        [reduce using rule 79 (OPTIONAL_NEWLINE)]
    '{'       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    $default  reduce using rule 79 (OPTIONAL_NEWLINE)

    Program              go to state 10
    GlobalStatementList  go to state 11
    GlobalStatement      go to state 12
    WhileStatement       go to state 13
    IfStatement          go to state 14
    FunctionDeclStmt     go to state 15
    OPTIONAL_NEWLINE     go to state 16


State 1

   17 FunctionDeclStmt: LET • ID ':' Type OPTION_STORE
   18                 | LET • MUT ID OPTION_STORE
   19                 | LET • MUT ID '=' STORE_DATA ';'

    MUT  shift, and go to state 17
    ID   shift, and go to state 18


State 2

   78 OPTIONAL_NEWLINE: NEWLINE •

    $default  reduce using rule 78 (OPTIONAL_NEWLINE)


State 3

   12 IfStatement: IF • Expr '{' $@2 GlobalStatementList '}'

    NEWLINE    shift, and go to state 2
    TRUE       shift, and go to state 19
    FALSE      shift, and go to state 20
    ID         shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    '-'        shift, and go to state 24
    '!'        shift, and go to state 25
    '('        shift, and go to state 26
    '"'        shift, and go to state 27

    '-'       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    $default  reduce using rule 79 (OPTIONAL_NEWLINE)

    Expr              go to state 28
    LORExpr           go to state 29
    LANDExpr          go to state 30
    EqualityExpr      go to state 31
    RelExpr           go to state 32
    AddExpr           go to state 33
    Term              go to state 34
    Factor            go to state 35
    OPTIONAL_NEWLINE  go to state 36
    DATA              go to state 37


State 4

   10 WhileStatement: WHILE • Expr '{' $@1 GlobalStatementList '}'

    NEWLINE    shift, and go to state 2
    TRUE       shift, and go to state 19
    FALSE      shift, and go to state 20
    ID         shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    '-'        shift, and go to state 24
    '!'        shift, and go to state 25
    '('        shift, and go to state 26
    '"'        shift, and go to state 27

    '-'       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    $default  reduce using rule 79 (OPTIONAL_NEWLINE)

    Expr              go to state 38
    LORExpr           go to state 29
    LANDExpr          go to state 30
    EqualityExpr      go to state 31
    RelExpr           go to state 32
    AddExpr           go to state 33
    Term              go to state 34
    Factor            go to state 35
    OPTIONAL_NEWLINE  go to state 36
    DATA              go to state 37


State 5

   22 FunctionDeclStmt: PRINT • '(' Expr ')' ';'

    '('  shift, and go to state 39


State 6

   21 FunctionDeclStmt: PRINTLN • $@4 '(' Expr ')' ';'

    $default  reduce using rule 20 ($@4)

    $@4  go to state 40


State 7

   16 FunctionDeclStmt: FUNC • ID '(' ')' '{' OPTIONAL_NEWLINE GlobalStatementList '}'

    ID  shift, and go to state 41


State 8

   23 FunctionDeclStmt: ID • ASSIGN Expr ';'

    ADD_ASSIGN  shift, and go to state 42
    SUB_ASSIGN  shift, and go to state 43
    MUL_ASSIGN  shift, and go to state 44
    DIV_ASSIGN  shift, and go to state 45
    REM_ASSIGN  shift, and go to state 46
    '='         shift, and go to state 47

    ASSIGN  go to state 48


State 9

    5 GlobalStatement: '{' • OPTIONAL_NEWLINE GlobalStatementList '}' OPTIONAL_NEWLINE

    NEWLINE  shift, and go to state 2

    NEWLINE   [reduce using rule 79 (OPTIONAL_NEWLINE)]
    $default  reduce using rule 79 (OPTIONAL_NEWLINE)

    OPTIONAL_NEWLINE  go to state 49


State 10

    0 $accept: Program • $end

    $end  shift, and go to state 50


State 11

    1 Program: GlobalStatementList • OPTIONAL_NEWLINE
    2 GlobalStatementList: GlobalStatementList • GlobalStatement

    LET      shift, and go to state 1
    NEWLINE  shift, and go to state 2
    IF       shift, and go to state 3
    WHILE    shift, and go to state 4
    PRINT    shift, and go to state 5
    PRINTLN  shift, and go to state 6
    FUNC     shift, and go to state 7
    ID       shift, and go to state 8
    '{'      shift, and go to state 9

    LET       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    NEWLINE   [reduce using rule 79 (OPTIONAL_NEWLINE)]
    IF        [reduce using rule 79 (OPTIONAL_NEWLINE)]
    WHILE     [reduce using rule 79 (OPTIONAL_NEWLINE)]
    PRINT     [reduce using rule 79 (OPTIONAL_NEWLINE)]
    PRINTLN   [reduce using rule 79 (OPTIONAL_NEWLINE)]
    FUNC      [reduce using rule 79 (OPTIONAL_NEWLINE)]
    ID        [reduce using rule 79 (OPTIONAL_NEWLINE)]
    '{'       [reduce using rule 79 (OPTIONAL_NEWLINE)]
    $default  reduce using rule 79 (OPTIONAL_NEWLINE)

    GlobalStatement   go to state 51
    WhileStatement    go to state 13
    IfStatement       go to state 14
    FunctionDeclStmt  go to state 15
    OPTIONAL_NEWLINE  go to state 52


State 12

    3 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 13

    8 GlobalStatement: WhileStatement •

    $default  reduce using rule 8 (GlobalStatement)


State 14

    7 GlobalStatement: IfStatement •
   14 IfStatement: IfStatement • ELSE '{' $@3 GlobalStatementList '}'

    ELSE  shift, and go to state 53

    ELSE      [reduce using rule 7 (GlobalStatement)]
    $default  reduce using rule 7 (GlobalStatement)


State 15

    4 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 4 (GlobalStatement)


State 16

    6 GlobalStatement: OPTIONAL_NEWLINE •
   15 IfStatement: OPTIONAL_NEWLINE •
